--- a/views/books/new-book.pug
+++ b/views/books/new-book.pug
@@ -5,7 +5,10 @@ html
     link(rel='stylesheet' href='/stylesheets/style.css')
   body
     h1 New Book
-    form
+    
+    include errors
+
+    form(method="post")
       p
         label(for='title') Title
         input#title(name='title' type='text')
@@ -21,4 +24,4 @@ html
       p
         input(type='submit' value='Create New Book')
       p
-        a.button(href='all_books.html') Cancel
+        a.button(href='/') Cancel
