--- a/views/page-not-found.pug
+++ b/views/page-not-found.pug
@@ -4,8 +4,7 @@ html
     title Page Not Found
     link(rel='stylesheet' href='/stylesheets/style.css')
   body
-    h1 Page Not Found
-    p Sorry! We couldn't find the page you were looking for.
-    br
+    h1= errors.status + " Page not found."
+    p= errors.message
     p
-      a.button(href='all_books.html') Home
+      a.button(href='/') Home
