--- a/views/books/update-book.pug
+++ b/views/books/update-book.pug
@@ -5,7 +5,7 @@ html
     link(rel='stylesheet' href='/stylesheets/style.css')
   body
     h1 Update Book
-    include errors
+    include error
     form(method="post")
       p
         label(for='title') Title
